  wxPrinterDC::GetPaperRect() and other functions added to allow
  easier printing implementation, and the documentation updated.
- Many enhancements to wxRichTextCtrl including URL support,
  formatting and symbol dialogs, print/preview, and better list
  formatting.
- Support for loading TGA files added (Seth Jackson)
- Added wxTB_RIGHT style for right-aligned toolbars (Igor Korot)
- Added events API to wxHtmlWindow (Francesco Montorsi).

Unix Ports:

- Added autopackage for wxGTK and an example of using autopackage for a wx
  program (Francesco Montorsi).

wxGTK:

- More RTL work.
- Support wxALWAYS_SHOW_SB.
- Speed up MIME types loading. Only the GNOME database should be loaded under
  GNOME etc. For this, the code queries the X11 session protocol.
- wxCaret redraw problem during scrolling fixed.


2.7.1
-----

All:

- Added wxDir::FindFirst() (Francesco Montorsi).
- Added wxPlatformInfo class (Francesco Montorsi).
- Added wxLocale::IsAvailable() (Creighton).
- Added Malay translations (Mahrazi Mohd Kamal)
- Added reference counting for wxVariant
- For consistency, all classes having Ok() method now also have IsOk() one, use
  of the latter form is preferred although the former hasn't been deprecated yet.
- Added wxFileName::Is(Dir|File)(Writ|Read|Execut)able() (Francesco Montorsi).
- Added wxFileName::GetSize() and GetHumanReadableSize() (Francesco Montorsi).
- Added wxSizer::Replace (Francesco Montorsi).
- wxXmlDocument can now optionally preserve whitespace (Francesco Montorsi).
- Added wxBookCtrl::ChangeSelection() and wxTextCtrl::ChangeValue() to provide
  event-free alternatives to SetSelection() and SetValue() functions; see the
  "Events generated by the user vs programmatically generated events" paragraph
  in the "Event handling overview" topic for more info.

All (GUI):

- Support for right-to-left text layout (started by Diaa Sami during Google Summer of
  Code, with a lot of help from Tim Kosse and others).